--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules":{
+       "indent": ["error", 2]
+    }
   },
   "browserslist": {
     "production": [
