--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
       "react-app",
       "react-app/jest"
     ],
-    "rules":{
-       "indent": ["error", 2]
+    "rules": {
+      "indent": [
+        "error",
+        2
+      ]
     }
   },
   "browserslist": {
@@ -44,7 +47,10 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "eslint": "^7.31.0",
+    "eslint-config-xo": "^0.37.0",
     "eslint-plugin-react": "^7.24.0"
   }
 }
