add omitlastinonelineblock to eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,8 @@
         ],
         "semi": [
             "error",
-            "always"
+            "always",
+            { "omitLastInOneLineBlock": true}
         ]
     }
 }
